<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:maxLength="11"
        android:inputType="number"
        android:id="@+id/edt_number"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/rbtn_male"
            android:text="Nam"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_female"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:onClick="addContact"
        android:id="@+id/btn_add_contact"
        android:padding="@dimen/padding_8dp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:text="@string/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
